--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@babel/node": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
     "@babel/register": "^7.18.9",
+    "connect-livereload": "^0.6.1",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "ws": "^8.11.0"
   }
 }
